sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:15: error: method ordre has return statement; needs result type
     return true;
     ^DutchFlagAlgo:18: error: method ordre has return statement; needs result type
      return true;
      ^DutchFlagAlgo:21: error: method ordre has return statement; needs result type
        return true
        ^DutchFlagAlgo:23: error: method ordre has return statement; needs result type
        return false
        ^